fixed some of the shader problems